--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -692,7 +692,7 @@ img.question_mark {
                             .preview-card {
                                 .preview-card-body {
                                     color: rgb(51, 51, 51);
-                                    background: rgb(241, 223, 213);
+                                    background: #ffffff;
                                     box-shadow: #0000004d 0px 10px 30px 0px;
                                     margin-bottom: 15px;
                                     text-align: left;
@@ -903,7 +903,7 @@ img.question_mark {
 
             .details {
                 color: rgb(51, 51, 51);
-                background: rgb(241, 223, 213);
+                background: #ffffff;
                 padding: 16.5px 13.75px;
 
                 .title {
@@ -988,7 +988,7 @@ img.question_mark {
 
             .details {
                 color: rgb(51, 51, 51);
-                background: rgb(241, 223, 213);
+                background: #ffffff;
                 padding: 16.5px 13.75px;
                 width: 68.5%;
                 border-top-right-radius: 6px;
@@ -1148,7 +1148,7 @@ img.question_mark {
 
             .details {
                 color: rgb(51, 51, 51);
-                background: rgb(241, 223, 213);
+                background: #ffffff;
                 padding: 16.5px 13.75px;
                 border-bottom-left-radius: 6px;
                 border-bottom-right-radius: 6px;
@@ -1291,7 +1291,7 @@ img.question_mark {
 
             .details {
                 color: rgb(51, 51, 51);
-                background: rgb(241, 223, 213);
+                background: #ffffff;
                 padding: 16.5px 13.75px;
                 border-bottom-left-radius: 6px;
                 border-bottom-right-radius: 6px;
