--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -195,7 +195,11 @@ img.question_mark {
 
 
 .template-layout {
-    background-color: #fff;
+    background-color: #f7f7f7;
+    .container-fluid {
+        padding-left: 0;
+        padding-right: 0;
+    }
 
     .template-header {
         display: flex;
