--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1707,5 +1707,9 @@ div#Design {
   .modal-body {
     padding: 0.5rem;
   }
+  .template-layout .template .item_two .preview-layout .preview-details .card-layout {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
