--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1744,4 +1744,8 @@ div#Design {
     .modal-body {
         padding: 0.5rem;
     }
+    .template-layout .template .item_two .preview-layout .preview-details .card-layout {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
 }
