--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,7 @@
   cursor: pointer;
 }
 
-input[type=checkbox]:checked + label {
+input[type="checkbox"]:checked + label {
   background-color: #c5c6c7;
 }
 
@@ -292,20 +292,20 @@ img.question_mark {
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
-  transition: all .1s ease-in-out;
-  -webkit-transition: all .1s ease-in-out;
-  -moz-transition: all .1s ease-in-out;
-  -ms-transition: all .1s ease-in-out;
-  -o-transition: all .1s ease-in-out;
+  transition: all 0.1s ease-in-out;
+  -webkit-transition: all 0.1s ease-in-out;
+  -moz-transition: all 0.1s ease-in-out;
+  -ms-transition: all 0.1s ease-in-out;
+  -o-transition: all 0.1s ease-in-out;
 }
 
 .template-layout .template .item_one .card-section .social-links .accordion .accordion-item .accordion-body .social_icons_lists .checkbox-social .social-icon:hover {
   background: #c5c6c7;
-  transition: all .1s ease-in-out;
-  -webkit-transition: all .1s ease-in-out;
-  -moz-transition: all .1s ease-in-out;
-  -ms-transition: all .1s ease-in-out;
-  -o-transition: all .1s ease-in-out;
+  transition: all 0.1s ease-in-out;
+  -webkit-transition: all 0.1s ease-in-out;
+  -moz-transition: all 0.1s ease-in-out;
+  -ms-transition: all 0.1s ease-in-out;
+  -o-transition: all 0.1s ease-in-out;
 }
 
 .template-layout .template .item_one .card-section .social-links .accordion .accordion-item .accordion-body .social_icons_lists .checkbox-social .social-icon .social-img {
@@ -446,20 +446,20 @@ img.question_mark {
 .template-layout .template .item_one .card-section .my-block .block-body .block-details .plus-icon:hover .plus {
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
-  -webkit-transition: -webkit-transform .2s ease-in-out;
-  transition: -webkit-transform .2s ease-in-out;
-  transition: transform .2s ease-in-out;
-  transition: transform .2s ease-in-out, -webkit-transform .2s ease-in-out;
+  -webkit-transition: -webkit-transform 0.2s ease-in-out;
+  transition: -webkit-transform 0.2s ease-in-out;
+  transition: transform 0.2s ease-in-out;
+  transition: transform 0.2s ease-in-out, -webkit-transform 0.2s ease-in-out;
 }
 
 .template-layout .template .item_one .card-section .my-block .block-body .block-details .plus-icon .plus {
   background: #1b97f5;
   border-radius: 50%;
   padding: 3px;
-  -webkit-transition: -webkit-transform .2s ease-in-out;
-  transition: -webkit-transform .2s ease-in-out;
-  transition: transform .2s ease-in-out;
-  transition: transform .2s ease-in-out, -webkit-transform .2s ease-in-out;
+  -webkit-transition: -webkit-transform 0.2s ease-in-out;
+  transition: -webkit-transform 0.2s ease-in-out;
+  transition: transform 0.2s ease-in-out;
+  transition: transform 0.2s ease-in-out, -webkit-transform 0.2s ease-in-out;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -506,7 +506,7 @@ img.question_mark {
           align-items: center;
   border-right: 1px solid #dfe0e1;
   cursor: move;
-  opacity: .6;
+  opacity: 0.6;
 }
 
 .template-layout .template .item_one .card-section .my-block .block-body .block-details .block-card .card-details .block-card-details {
@@ -581,16 +581,16 @@ img.question_mark {
   -moz-transform: scale(1.1);
   -ms-transform: scale(1.1);
   -o-transform: scale(1.1);
-  -webkit-transition: all .2s ease;
-  transition: all .2s ease;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
 }
 
 .template-layout .template .item_one .card-section .my-block .block-body .block-details .block-card .card-details .block-card-action .action-icon img {
   width: 15px;
   height: auto;
   transform: scale(1);
-  -webkit-transition: all .2s ease;
-  transition: all .2s ease;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
   -webkit-transform: scale(1);
   -moz-transform: scale(1);
   -ms-transform: scale(1);
@@ -824,11 +824,11 @@ img.question_mark {
 .template-layout .template .item_two .preview-layout .preview-details .card-layout .footer-text a .powered-by {
   color: #000;
   text-transform: uppercase;
-  letter-spacing: .5px;
-  font-size: .8em;
+  letter-spacing: 0.5px;
+  font-size: 0.8em;
   font-weight: 500;
   margin-bottom: 0;
-  opacity: .6;
+  opacity: 0.6;
 }
 
 .template-layout .template .item_two .preview-layout .preview-details .card-layout .footer-text a .link-text {
@@ -1215,9 +1215,9 @@ img.question_mark {
 }
 
 .link_preview.thumbnail-grid .live-preview.thumbnail-grid-view {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
 }
 
 .link_preview.thumbnail-grid .live-preview a {
@@ -1245,9 +1245,9 @@ img.question_mark {
 }
 
 .link_preview.thumbnail-carousel .live-preview.thumbnail-carousel-view {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
+  display: -webkit-inline-box !important;
+  display: -ms-inline-flexbox !important;
+  display: inline-flex !important;
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
@@ -1408,8 +1408,8 @@ img.question_mark {
   height: 44px;
   text-align: center;
   position: relative;
-  -webkit-transition: opacity .3s ease;
-  transition: opacity .3s ease;
+  -webkit-transition: opacity 0.3s ease;
+  transition: opacity 0.3s ease;
   color: #1a1a1a;
   white-space: nowrap;
   cursor: pointer;
@@ -1462,7 +1462,7 @@ img.question_mark {
 
 .default_embed_layout .embedUrl .video_svg img {
   width: 36px;
-  opacity: .5;
+  opacity: 0.5;
 }
 
 .default_embed_layout .embedUrl .embed_placeholder {
@@ -1617,7 +1617,7 @@ div#Design {
 }
 
 .change_preview_layout .change_layout .change_item:not(.selected) {
-  opacity: .6;
+  opacity: 0.6;
 }
 
 .viewLayout .template-layout .template .item_two .preview-layout .preview-details {
@@ -1707,7 +1707,12 @@ div#Design {
   .modal-body {
     padding: 0.5rem;
   }
-  .template-layout .template .item_two .preview-layout .preview-details .card-layout {
+  .template-layout
+.template
+.item_two
+.preview-layout
+.preview-details
+.card-layout {
     padding-left: 20px;
     padding-right: 20px;
   }
