--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1588,6 +1588,7 @@ div#Design {
                             margin-bottom: 5px;
                             padding-right: 15px;
                             padding-left: 15px;
+                            background-color: transparent !important;
                             .preview-all {
                                 .preview-card {
                                     .link_preview {
