--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1620,6 +1620,101 @@ div#Design {
   opacity: 0.6;
 }
 
+.select-color {
+  font-size: 16px;
+  padding: 2px 10px;
+  margin-bottom: 5px;
+  cursor: pointer;
+  -webkit-box-shadow: 0 2px 16px #00000014, 0 0.25px 2px #00000042;
+          box-shadow: 0 2px 16px #00000014, 0 0.25px 2px #00000042;
+  background-color: #fff;
+  border-radius: 3px;
+}
+
+.select-color.selected,
+.select-color:hover {
+  color: #fff;
+  background: #999;
+}
+
+.link-background-type-preset {
+  width: 100%;
+  height: 8rem;
+  border-radius: 0.25rem;
+  opacity: 0.75;
+  -webkit-transition: 0.3s opacity;
+  transition: 0.3s opacity;
+}
+
+input[type="radio"]:checked ~ .link-background-type-preset {
+  opacity: 1;
+}
+
+.link-body-background-one {
+  background-image: linear-gradient(111.7deg, #a529b9 19.9%, #50b1e1 95%);
+}
+
+.link-body-background-two {
+  background-image: linear-gradient(109.6deg, #ffb418 11.2%, #f73131 91.1%);
+}
+
+.link-body-background-three {
+  background-image: linear-gradient(135deg, #79f1a4 10%, #0e5cad 100%);
+}
+
+.link-body-background-four {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#ff758c), to(#ff7eb3));
+  background-image: linear-gradient(to bottom, #ff758c, #ff7eb3);
+}
+
+.link-body-background-five {
+  background-image: linear-gradient(292.2deg, #3355ff 33.7%, #0088ff 93.7%);
+}
+
+.link-body-background-six {
+  background: -webkit-gradient(linear, left top, left bottom, from(#fc5c7d), to(#6a82fb));
+  background: linear-gradient(to bottom, #fc5c7d, #6a82fb);
+}
+
+#background_type_gradient .form-group input {
+  padding: 0;
+  height: 30px;
+  cursor: pointer;
+}
+
+#background_type_color .form-group input {
+  padding: 0;
+  height: 30px;
+  cursor: pointer;
+}
+
+#background_type_image .form-group .link-background-type-image {
+  border-radius: 0.25rem;
+  margin-bottom: 0.5rem;
+  max-width: 100%;
+  height: auto;
+}
+
+.card-layout video {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  -o-object-fit: cover;
+     object-fit: cover;
+  z-index: 0;
+  top: 0;
+  left: 0;
+}
+
+/* Just styling the content of the div, the *magic* in the previous rules */
+.card-layout .caption {
+  z-index: 1;
+  position: relative;
+  text-align: center;
+  color: #dc0000;
+  padding: 10px;
+}
+
 .viewLayout .template-layout .template .item_two .preview-layout .preview-details {
   border: 0px;
   max-height: 100vh;
