--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1582,6 +1582,11 @@ div#Design {
     color: #fff;
     background: #999;
 }
+#background_type_preset {
+    label {
+        cursor: pointer;
+    }
+}
 
 .link-background-type-preset {
     width: 100%;
