--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1637,6 +1637,10 @@ div#Design {
   background: #999;
 }
 
+#background_type_preset label {
+  cursor: pointer;
+}
+
 .link-background-type-preset {
   width: 100%;
   height: 8rem;
