--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1737,7 +1737,7 @@ input[type="radio"]:checked ~ .link-background-type-preset {
   margin-bottom: 5px;
   padding-right: 15px;
   padding-left: 15px;
-  background-color: transparent !important;
+  background-color: transparent;
 }
 
 .viewLayout .template-layout .template .item_two .preview-layout .preview-details .card-layout .preview-all .preview-card .link_preview .preview-card-body.card-style {
