--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1711,7 +1711,7 @@ input[type="radio"]:checked ~ .link-background-type-preset {
                             margin-bottom: 5px;
                             padding-right: 15px;
                             padding-left: 15px;
-                            background-color: transparent !important;
+                            background-color: transparent;
                             .preview-all {
                                 .preview-card {
                                     .link_preview {
