--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1750,6 +1750,81 @@ input[type="radio"]:checked ~ .link-background-type-preset {
 
 // viewLayout preview layout
 
+// theme layout
+
+.template-layout {
+    .template {
+        .themeLayout {
+            display: flex;
+            overflow: auto;
+            padding-bottom: 15px;
+            .item_two {
+                padding: 0;
+                margin: 0 5px;
+                cursor: pointer;
+                .preview-layout {
+                    position: relative;
+                    .preview-details {
+                        &.mobile_size {
+                            max-width: 300px;
+                            margin: auto;
+                            min-width: 250px;
+                            border-radius: 20px;
+                        }
+                        .card-layout {
+                            padding-bottom: 33px;
+                        }
+                        .themeName {
+                            position: absolute;
+                            background-color: #fff;
+                            right: 0px;
+                            left: 0px;
+                            bottom: -1px;
+                            height: 30px;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            border-bottom-left-radius: 20px;
+                            border-bottom-right-radius: 20px;
+                            border: 1px solid;
+                        }
+                    }
+                    .checkOverlay {
+                        position: absolute;
+                        top: 0;
+                        right: 0;
+                        left: 0;
+                        bottom: 0;
+                        border-radius: 20px;
+                        -webkit-border-radius: 20px;
+                        -moz-border-radius: 20px;
+                        -ms-border-radius: 20px;
+                        -o-border-radius: 20px;
+                        z-index: 1;
+                        display: none;
+                        align-items: center;
+                        justify-content: center;
+                        background: #7e6e6e80;
+                        .checkIcon {
+                            .checkIconImg {
+                                width: 50px;
+                                height: 50px;
+                            }
+                        }
+                    }
+                    &.active {
+                        .checkOverlay {
+                            display: flex;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+// theme layout
+
 @media screen and (max-width: 1300px) {
     .template-layout {
         .template-header {
