--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1360,6 +1360,7 @@ img.question_mark {
                 border: 1px solid #dfe0e1;
                 background-repeat: no-repeat;
                 background-position: center;
+                background-size: cover;
             }
         }
     }
