--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1086,6 +1086,34 @@ section {
     }
 }
 
+.block-card {
+    .block-card-action {
+        transform: translate(100%, 0px);
+        -webkit-transform: translate(100%, 0px);
+        -moz-transform: translate(100%, 0px);
+        -ms-transform: translate(100%, 0px);
+        -o-transform: translate(100%, 0px);
+        transition: all 0.3s ease;
+        -webkit-transition: all 0.3s ease;
+        -moz-transition: all 0.3s ease;
+        -ms-transition: all 0.3s ease;
+        -o-transition: all 0.3s ease;
+    }
+    &:hover {
+        .block-card-action {
+            transform: translate(0%, 0px);
+            -webkit-transform: translate(0%, 0px);
+            -moz-transform: translate(0%, 0px);
+            -ms-transform: translate(0%, 0px);
+            -o-transform: translate(0%, 0px);
+            transition: all 0.3s ease;
+            -webkit-transition: all 0.3s ease;
+            -moz-transition: all 0.3s ease;
+            -ms-transition: all 0.3s ease;
+            -o-transition: all 0.3s ease;
+        }
+    }
+}
 .newBlockModel {
     max-width: 450px;
 
