--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1885,9 +1885,9 @@ div#Design {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   height: 66px;
   -webkit-box-align: center;
       -ms-flex-align: center;
