--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1838,7 +1838,7 @@ div#Design {
 
 .change_preview_layout {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     height: 66px;
     align-items: center;
 
